--- a/starter-code/apple-pie-starter-code/index.html
+++ b/starter-code/apple-pie-starter-code/index.html
@@ -1,35 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta charset="utf-8">
 <head>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <title>Apple Pie Recipe</title>
 </head>
 <body>
-Apple Pies
-This was my grandmother's apple pie recipe. I have never seen another one
-quite like it. It will always be my favorite and has won me several first place
-prizes in local competitions. I hope it becomes one of your favorites as well!
-
-Ingredients
-1 recipe pastry for a 9 inch double crust pie
-1/2 cup unsalted butter
-3 tablespoons all-purpose flour
-1/4 cup water
-3 tablespoons all-purpose flour
-1/4 cup water
-1/2 cup white sugar
-1/2 cup packed brown sugar
-8 Granny Smith apples - peeled, cored and sliced
-
-Directions
-Preheat oven to 425 degrees F (220 degrees C). Melt the butter in a saucepan. Stir in
+  <img class="top-image" src = "images/apple-pie.jpg">
+<h1>Apple Pie</h1>
+  <div id="center">
+    <div class="content-intro">
+      <p>This was my grandmother's apple pie recipe. I have never seen another one
+      <br>quite like it. It will always be my favorite and has won me several first place<br>
+          prizes in local competitions. I hope it becomes one of your favorites as well!</p>
+</div>
+    <img class="banners-info" src = "images/recipe-info.png" >
+       <hr/>
+<h2>Ingredients</h2>
+      <div class="content">
+        <ul>
+        <li>1 recipe pastry for a 9 inch double crust pie</li>
+        <li>1/2 cup unsalted butter</li>
+        <li>1/4 cup water</li>
+        <li>3 tablespoons all-purpose flour</li>
+        <li>3 tablespoons all-purpose flour</li>
+        <li>1/4 cup water</li>
+        <li>1/2 cup packed brown sugar</li>
+        <li>1/2 cup white sugar</li>
+        <li>8 Granny Smith apples - peeled, cored and sliced</li>
+        </ul>
+      </div>
+    <img class="banners-info" src = "images/cooking-info.png">
+         <hr/>
+  <h2>Directions</h2>
+  <div class="content">
+    <ul>
+      <ol>Preheat oven to 425 degrees F (220 degrees C). Melt the butter in a saucepan. Stir in
 flour to form a paste. Add water, white sugar and brown sugar, and bring to a boil. Reduce
-temperature and let simmer.
+temperature and let simmer.</ol>
 
-Place the bottom crust in your pan. Fill with apples, mounded slightly. Cover with a
+<ol>Place the bottom crust in your pan. Fill with apples, mounded slightly. Cover with a
 lattice work crust. Gently pour the sugar and butter liquid over the crust. Pour slowly so
-that it does not run off.
+that it does not run off.</ol>
 
-Bake 15 minutes in the preheated oven. Reduce the temperature to 350 degrees F (175
-degrees C). Continue baking for 35 to 45 minutes, until apples are soft.
+<ol>Bake 15 minutes in the preheated oven. Reduce the temperature to 350 degrees F (175
+degrees C). Continue baking for 35 to 45 minutes, until apples are soft.</ol>
+</ul>
+
+  </div>
+</id>
 </body>
 </html>
